--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <a-scene>
       <a-cube></a-cube>
-	  <a-model src="Untitled.obj" format="obj"></a-model>
+	  <a-model src="dae.textures.dae" format="dae"></a-model>
     </a-scene>
   </body>
 </html>
