--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Composite</title>
+    <title>Composite 1234</title>
     <meta name="description" content="Composite — A-Frame">
     <script src="aframe.js"></script>
   </head>
