--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Composite 1234</title>
+    <title>Composite 12345</title>
     <meta name="description" content="Composite — A-Frame">
     <script src="aframe.js"></script>
   </head>
@@ -10,6 +10,8 @@
     <a-scene>
       <a-cube></a-cube>
 	  <a-model src="baymax.obj" format="obj"></a-model>
+	  <a-entity geometry="primitive: sphere; radius: 1000;"
+                material="color: #4CC3D9; shader: flat; side: double;"></a-entity>
     </a-scene>
   </body>
 </html>
