--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <a-scene>
       <a-cube></a-cube>
-	  <a-model src="Untitled.obj" format="obj"></a-model>
+	  <a-model src="dae.textures.dae" format="dae"></a-model>
 	  <a-entity geometry="primitive: sphere; radius: 1000;"
                 material="color: #4CC3D9; shader: flat; side: double;"></a-entity>
     </a-scene>
