--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Composite 12345</title>
+    <title>Composite nocube</title>
     <meta name="description" content="Composite — A-Frame">
     <script src="aframe.js"></script>
   </head>
   <body>
     <a-scene>
-      <a-cube></a-cube>
-	  <a-model src="sword.obj" format="obj"></a-model>
+      	  <a-model src="sword.obj" format="obj"></a-model>
 	  <a-entity geometry="primitive: sphere; radius: 1000;"
                 material="color: #4CC3D9; shader: flat; side: double;"></a-entity>
     </a-scene>
