sword.obj no-go
no material settings or textures, so it turned up blank? OBJLoader: 47.783ms so something loaded
going back to baymax, moved him down a bit

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Composite nocube</title>
+    <title>A-Frame Baymax</title>
     <meta name="description" content="Composite — A-Frame">
     <script src="aframe.js"></script>
   </head>
   <body>
     <a-scene>
-      	  <a-model src="sword.obj" format="obj"></a-model>
+      	  <a-model src="baymax.obj" format="obj" position="0 0 -4"></a-model>
 	  <a-entity geometry="primitive: sphere; radius: 1000;"
                 material="color: #4CC3D9; shader: flat; side: double;"></a-entity>
     </a-scene>
