--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>A-Frame Baymax</title>
-    <meta name="description" content="Composite — A-Frame">
+    <title>A-Frame sword.obj</title>
+    <meta name="description" content="A-Frame">
     <script src="aframe.js"></script>
   </head>
   <body>
     <a-scene>
-      	  <a-model src="baymax.obj" format="obj" position="0 0 -8"></a-model>
+      	  <a-model src="sword.obj" format="obj" position="0 0 0"></a-model>
 	  <a-entity geometry="primitive: sphere; radius: 1000;"
                 material="color: #4CC3D9; shader: flat; side: double;"></a-entity>
     </a-scene>
