--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
   </head>
   <body>
     <a-scene>
+    	<a-assets>
+    	    <a-asset-item id="baymax-obj" src="baymax.obj"></a-asset-item>
+    	    <a-asset-item id="baymax-mtl" src="baymax.mtl"></a-asset-item>
+    	</a-assets>
+    	
+    	<a-obj-model src"#baymax-obj" mtl="#baymax-mtl"></a-obj-model>
+    	<!--
       	  <a-model src="sword.obj" format="obj" position="0 0 0"></a-model>
 	  <a-entity geometry="primitive: sphere; radius: 1000;"
                 material="color: #4CC3D9; shader: flat; side: double;"></a-entity>
+                -->
     </a-scene>
   </body>
 </html>
